assets/css/seanh.css
/* ... */
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/
html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p,
blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img,
ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i,
center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption,
tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section,
summary, time, mark, audio, video, hr {
  margin: 0;
  padding: 0;
  border: 0;
  font: inherit;
  vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
  display: block;
}

/* html and body need to have height: 100% in order for the sticky bottom
 * site-footer to work. */
html, body {
  height: 100%;
}

body {
  box-sizing: border-box;
  text-rendering: optimizelegibility;
  font-feature-settings: "kern";
  font-size: var(--body-font-size);
  text-size-adjust: none;
  font-family: var(--body-font-family);
  background-color: var(--body-background-color);
  color: var(--body-color);
  line-height: var(--body-line-height);

  display: flex;
  flex-direction: column;
}

img, .content blockquote, .content p, .content li, .content ul, .content ol,
.content figure, .content__inner-container pre,
.content__inner-container iframe, dd, .content details, .scroll,
.admonition, .attention, .caution, .danger, .error, .important, .warning,
.hint, .tip, .note, .seealso, .todo {
  margin-bottom: 26px;
}

dt {
  font-weight: var(--bold-font-weight);
}

blockquote {
  quotes: none;
}
blockquote:before, blockquote:after {
  content: '';
  content: none;
}
q {
  quotes: "“" "”" "‘" "’";
}
q:before {
    content: open-quote;
}
q:after {
    content: close-quote;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

a {
  outline: 0;
  text-decoration: none;
  border-bottom: 1px solid;
}
a.anchor {
  border-bottom: none;
}

img {
  display: block;
  margin-left: auto;
  margin-right: auto;
  max-width: 100%;
}

.site-header {
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 12px;
  padding-bottom: 12px;
  background-color: var(--body-color);
  color: var(--muted-color);
}
.site-header__navbar {
  text-align: center;
  overflow-x: auto;
  white-space: nowrap;
}
.site-header__nav-links {
  list-style: none;
}
.site-header__nav-item {
  display: inline-block;
  vertical-align: bottom;
}
.site-header__nav-item:first-child a {
  padding-left: 0;
}
.site-header__nav-item:last-child a {
  padding-right: 0;
}
.site-header__nav-link {
  color: hsla(0,0%,100%,.75);
  text-decoration: none;
  border: none;
  padding-right: 16px;
  line-height: 32px;
  transition: color 250ms linear;
  font-size: var(--navbar-font-size);
  font-weight: var(--navbar-font-weight);
}
.site-header__nav-link--active {
  color: white;
}

.content__title {
  text-align: center;
}

.content__outer-container {
  max-width: 800px;
  margin-left: auto;
  margin-right: auto;
  padding: 0 20px;
}

.content__inner-container {
  max-width: 650px;
  margin-left: auto;
  margin-right: auto;
}

.content h1,
.content h2,
.content h3,
.content h4,
.content h5,
.content h6 {
  line-height: 1.2;
  font-weight: 600;
  margin-bottom: 26px;
}
.content h1 { font-size: 2.5rem; }
.content h2 { font-size: 2rem; }
.content h3 { font-size: 1.75rem; }
.content h4 { font-size: 1.5rem; }
.content h5 { font-size: 1.25rem; }
.content h6 { font-size: 1rem; }

.content blockquote {
  font-style: italic;
  border-left: 3px solid #2b90d9;
  padding-left: 20px;
  padding-bottom: 2px;
}
.content blockquote footer,
.content blockquote cite {
  color: var(--muted-color);
}
.content blockquote footer:before,
.content blockquote cite:before {
  content: "\2014 \00A0";
}
.content blockquote footer cite:before {
  content: "";
}
.content blockquote *:last-child {
  margin-bottom: 0;
}
.content blockquote blockquote,
.content li blockquote {
  margin-left: 3px;
}

.content p, .content li {
  hyphens: auto;
}

.content__inner-container img {
  margin-bottom: 0;
  height: auto;
  border-radius: 4px;
}
.content__inner-container img:not(.emoji), .box-shadow {
  box-shadow: 4px 6px 18px rgba(0, 0, 0, 0.35);
}

img.emoji { display: inline-block; }

.content .image-pull-left {
  float: left;
}

.content em {
  font-style: italic;
}

.content strong {
  font-weight: var(--bold-font-weight);
  color: var(--bold-color);
}

.content ul, .content ol {
  counter-reset: post;
}
.content ul li, .content ol li {
  margin-left: 30px;
  margin-bottom: 14px;
}
.content ul li:last-child, .content ol li:last-child {
  margin-bottom: 0;
}

.content figure figcaption {
  text-align: center;
}
.content figure img {
  margin-bottom: 8px;
}
.content figure figcaption, .content figure figcaption p {
    color: var(--muted-color);
}

.content hr {
  background: transparent;
  border: 0;
  border-top: 1px solid var(--muted-color);
  margin-bottom: 26px;
}

code {
  background-color: var(--code-background-color);
  color: var(--code-color);
  padding: 0.2em 0.4em;
  font-family: var(--code-font-family);
  font-size: var(--code-font-size);
  border-radius: 3px;
  white-space: nowrap;
}
a code {
  background-color: inherit;
  color: inherit;
  padding: 0;
}
h1 code, h2 code, h3 code, h4 code, h5 code, h6 code {
  background-color: var(--body-background-color);
  color: var(--body-color);
  padding: 0;
}
pre {
  line-height: 1.25;
  padding: 16px;
  overflow: auto;
}
.scroll { max-height: 350px; overflow-y: scroll; }
.scroll pre { margin-bottom: 0; }
.content__inner-container pre {
  border-radius: 4px;
}
pre, pre code {
  color: var(--pre-code-color);
  background-color: var(--pre-code-background-color);
}
.gist pre, .gist pre code {
  color: var(--body-color);
  background-color: var(--body-background-color);
}
/* ... */

